<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:id="@+id/display"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_above="@id/scrollView"
        android:layout_weight="1"
        android:text="@string/display"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="375dp"
        android:layout_height="257dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="216dp"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!-- スクロールさせたいTextView -->
        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="「表示」を押すとDBのデータを全件表示します"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </ScrollView>

    <Button
        android:id="@+id/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="304dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="#ffff4444"
        android:text="@string/delete_all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="92dp"
        android:layout_weight="1"
        android:text="@string/update"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:layout_weight="1"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
